--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/ATUDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/ATUDataTemplate.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.ATUDataTemplate"
+﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.ATUDataTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,9 +8,10 @@
              xmlns:atu="clr-namespace:SCME.Types.ATU;assembly=SCME.Types"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=atu:TestParameters}"
              d:DesignWidth="800">
-    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -22,5 +23,4 @@
 
         <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.AtuPowerValueSet}" />
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"   Value="{Binding PowerValue}" />
-    </Grid>
-</UserControl>
+</Grid>
