--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.GateDataTemplate"
+﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.GateDataTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,11 +8,10 @@
              xmlns:gate="clr-namespace:SCME.Types.Gate;assembly=SCME.Types"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=gate:TestParameters}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column0"/>
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column2"/>
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -41,5 +40,4 @@
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding IH }" />
         <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.MaxIl_mA}" />
         <customControls:NumericUpDown Grid.Column="3" Grid.Row="4" Value="{Binding IL}" />
-    </Grid>
-</UserControl>
+</Grid>
