--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
@@ -1,58 +1,57 @@
-﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.QrrTqDataTemplate"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:qrrTq="clr-namespace:SCME.Types.QrrTq;assembly=SCME.Types"
-             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=qrrTq:TestParameters}"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
+﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.QrrTqDataTemplate"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
+      xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+      xmlns:qrrTq="clr-namespace:SCME.Types.QrrTq;assembly=SCME.Types"
+      mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=qrrTq:TestParameters}"
+      d:DesignHeight="450" d:DesignWidth="800">
+    <Grid.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="84*" />
-            <ColumnDefinition Width="14*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    </Grid.Resources>
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
+        <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
+        <ColumnDefinition Width="1*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.QrrTqMode}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="0" Value="{Binding Mode}" />
-        <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Mode}" />
+    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqMode}" />
+    <ComboBox Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2" ItemsSource="{Binding Source={StaticResource TModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Mode}" />
 
-        <CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" IsChecked="{Binding TrrMeasureBy9050Method}"/>
+    <CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" IsChecked="{Binding TrrMeasureBy9050Method}" />
 
-        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.QrrTqDirectCurrent}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding DirectCurrent}" />
+    <Label Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqDirectCurrent}" />
+    <customControls:NumericUpDown Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" Value="{Binding DirectCurrent}" />
 
-        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.QrrTqDCPulseWidth}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding DCPulseWidth}" />
+    <Label Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqDCPulseWidth}" />
+    <customControls:NumericUpDown Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="3" Value="{Binding DCPulseWidth}" />
 
-        <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.QrrTqDCRiseRate}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding DCRiseRate}" />
+    <Label Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqDCRiseRate}" />
+    <customControls:NumericUpDown Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="4" Value="{Binding DCRiseRate}" StringFormat="{}{0:N3}" />
 
-        <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.QrrTqDCFallRate}" />
-        <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Source={StaticResource TDcFallRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DCFallRate}" />
-        
-        <Label Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="6" Value="{Binding OffStateVoltage}" />
+    <Label Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqDCFallRate}" />
+    <ComboBox Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" ItemsSource="{Binding Source={StaticResource TDcFallRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DCFallRate}" />
 
-        <Label Grid.Column="0" Grid.Row="7" Content="{x:Static res:Resources.QrrTqOsvRate}" />
-        <ComboBox Grid.Column="1" Grid.Row="7" ItemsSource="{Binding Source={StaticResource TOsvRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding OsvRate}" />
-    </Grid>
-</UserControl>
+    <Label Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" />
+    <customControls:NumericUpDown Grid.Column="2" Grid.Row="6" Value="{Binding OffStateVoltage}" />
+
+    <TextBlock Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Text="{x:Static res:Resources.QrrTqOsvRate}" />
+    <ComboBox Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" ItemsSource="{Binding Source={StaticResource TOsvRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding OsvRate}" />
+</Grid>
