--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/TOUDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/TOUDataTemplate.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.TOUDataTemplate"
+﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.TOUDataTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,15 +9,15 @@
              xmlns:types="clr-namespace:SCME.Types;assembly=SCME.Types"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=tou:TestParameters}"
              d:DesignWidth="800">
-    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TOUITM}" />
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="0" Value="{Binding CurrentAmplitude}" MinMaxInterval="{x:Static types:ConstantsMinMax+Tou.CurrentAmplitude}" />
-    </Grid>
-</UserControl>
+</Grid>
