--- a/SCME.WpfControlLibrary/Styles/CheckBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/CheckBox.xaml
@@ -46,13 +46,6 @@
                                        Height="3"
                                        Fill="{DynamicResource GrayBrush3}"
                                        Opacity="0" />
-                            <Border x:Name="disabled"
-                                    Width="{DynamicResource SCME.CheckBoxBorderSize}"
-                                    Height="{DynamicResource SCME.CheckBoxBorderSize}"
-                                    Background="{DynamicResource SemiTransparentWhiteBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}"
-                                    Opacity="0"
-                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                         </Grid>
                         <ContentPresenter x:Name="contentPresenter"
                                           Grid.Column="1"
@@ -67,18 +60,6 @@
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal" />
-                                <VisualState x:Name="Disabled">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="contentPresenter"
-                                                         Storyboard.TargetProperty="(UIElement.Opacity)"
-                                                         To="1.0"
-                                                         Duration="0" />
-                                        <DoubleAnimation Storyboard.TargetName="disabled"
-                                                         Storyboard.TargetProperty="(UIElement.Opacity)"
-                                                         To="1"
-                                                         Duration="0" />
-                                    </Storyboard>
-                                </VisualState>
                             </VisualStateGroup>
                             <VisualStateGroup x:Name="CheckStates">
                                 <VisualState x:Name="Checked">
@@ -102,9 +83,9 @@
                         </VisualStateManager.VisualStateGroups>
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="normal" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(controls:ControlsHelper.MouseOverBorderBrush)}" />
-                        </Trigger>
+                        <!-- <Trigger Property="IsMouseOver" Value="True"> -->
+                        <!--     <Setter TargetName="normal" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(controls:ControlsHelper.MouseOverBorderBrush)}" /> -->
+                        <!-- </Trigger> -->
                         <Trigger Property="IsPressed" Value="True">
                             <Setter TargetName="normal" Property="BorderBrush" Value="{DynamicResource HighlightBrush}" />
                         </Trigger>
@@ -117,6 +98,10 @@
                                     <ScaleTransform ScaleX="-1" />
                                 </Setter.Value>
                             </Setter>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Setter TargetName="normal" Property="Visibility" Value="Hidden"/>
                         </Trigger>
                         <Trigger Property="controls:ToggleButtonHelper.ContentDirection" Value="RightToLeft">
                             <Setter Property="Padding" Value="0 0 6 0" />
